--- a/data-prepro.ipynb
+++ b/data-prepro.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
+    "import math\n",
     "# from moviepy.video.io.VideoFileClip import VideoFileClip\n",
     "# from moviepy.video.io.ffmpeg_tools import ffmpeg_extract_subclip"
    ]
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +141,19 @@
       " 'https://www.youtube.com/watch?v=o5CGrqcmNow'\n",
       " 'https://www.youtube.com/watch?v=pJKVOWApsEU'\n",
       " 'https://www.youtube.com/watch?v=y9ZQj3758mw']\n",
-      "1697.68\n"
+      "1697.68\n",
+      "41_2018-07-06_1 51_2018-07-06_1 236\n",
+      "51_2018-07-06_1 50_2018-07-06_1 237\n",
+      "50_2018-07-06_1 35_2018-07-06_1 238\n",
+      "35_2018-07-06_1 34_2018-07-06_2 239\n",
+      "34_2018-07-06_2 41_2018-07-06_2 240\n",
+      "41_2018-07-06_2 4_2018-07-06_2 241\n",
+      "4_2018-07-06_2 50_2018-07-06_2 242\n",
+      "50_2018-07-06_2 50_2018-07-06_3 243\n",
+      "50_2018-07-06_3 50_2018-07-06_4 244\n",
+      "50_2018-07-06_4 51_2018-07-06_4 245\n",
+      "51_2018-07-06_4 25_2019-07-05_1 246\n",
+      "25_2019-07-05_1 31_2019-07-05_1 247\n"
      ]
     }
    ],
@@ -153,17 +166,30 @@
     "print(float(sample[5]))\n",
     "\n",
     "\n",
-    "count = 0\n",
-    "for i in range(0,len(lines),2):\n",
-    "    sample = lines[i if lines[i][6]> lines[i+1][6]  else i+1]\n",
-    "    if sample[4] == links[0]:\n",
-    "        count +=1\n",
-    "        ffmpeg_extract_subclip(\"videos/0.mp4\", float(sample[5]), float(sample[6]), \"cropped/\" + sample[0]+\".mp4\")\n",
+    "i=0\n",
+    "while i < len(lines):\n",
+    "    \n",
+    "    if float(lines[i][5]) == float(lines[i+1][5])  and lines[i][4] == lines[i+1][4]:\n",
+    "        sample = lines[i if lines[i][6]> lines[i+1][6]  else i+1]\n",
+    "        start = float(lines[i][5])\n",
+    "        end = max(float(lines[i][6]), float(lines[i+1][6]))\n",
     "        \n",
-    "    if count >= 5:\n",
-    "        break\n",
-    "       \n",
-    "#https://stackoverflow.com/questions/52257731/extract-part-of-a-video-using-ffmpeg-extract-subclip-black-frames "
+    "        name = lines[i][0]+\"&\"+lines[i+1][0]\n",
+    "        i+=2\n",
+    "    else:\n",
+    "        sample = lines[i]\n",
+    "        start = float(sample[5])\n",
+    "        end = float(sample[6])\n",
+    "        name = sample[0]\n",
+    "        i+=1\n",
+    "\n",
+    "    idx = np.where(links == sample[4])\n",
+    "    ## If its the first video, remove once all have been downloaded\n",
+    "    if idx[0][0] == 0:\n",
+    "        print(lines[i][0]+\" \"+lines[i+1][0] +\" \"+str(i))\n",
+    "        ffmpeg_extract_subclip(\"videos/\"+str(idx[0][0])+\".mp4\", start, end, \"cropped/\" + name+\".mp4\")\n",
+    "        \n",
+    "       \n"
    ]
   }
  ],
