--- a/data-prepro.ipynb
+++ b/data-prepro.ipynb
@@ -9,15 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
     "import math\n",
+    "import shutil\n",
     "# from moviepy.video.io.VideoFileClip import VideoFileClip\n",
     "# from moviepy.video.io.ffmpeg_tools import ffmpeg_extract_subclip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.exists('videos'):\n",
+    "    shutil.unpack_archive('videos.zip', 'videos')\n"
    ]
   },
   {
@@ -114,57 +125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['52_2018-07-28_1' '52' '2018-07-28' '1'\n",
-      " 'https://www.youtube.com/watch?v=gov-xssWc0E' '1625.81' '1631.72' '5.91'\n",
-      " '148' '1' 'l' '25']\n",
-      "['https://www.youtube.com/watch?v=-_x798uYXlg'\n",
-      " 'https://www.youtube.com/watch?v=1nZB-YeGJuY'\n",
-      " 'https://www.youtube.com/watch?v=1qsaxQFSOJA'\n",
-      " 'https://www.youtube.com/watch?v=BIcThugvCPQ'\n",
-      " 'https://www.youtube.com/watch?v=DpavgMOwjkU'\n",
-      " 'https://www.youtube.com/watch?v=KI4L0eokqkc'\n",
-      " 'https://www.youtube.com/watch?v=QQZnVEeBigY'\n",
-      " 'https://www.youtube.com/watch?v=eEscR-ZiY2w'\n",
-      " 'https://www.youtube.com/watch?v=fLwHcImYUr8'\n",
-      " 'https://www.youtube.com/watch?v=frbvf1iQ56U'\n",
-      " 'https://www.youtube.com/watch?v=gov-xssWc0E'\n",
-      " 'https://www.youtube.com/watch?v=i0vHEP6T7fw'\n",
-      " 'https://www.youtube.com/watch?v=l4kuUV-hL3s'\n",
-      " 'https://www.youtube.com/watch?v=lBf2lp7OxnY'\n",
-      " 'https://www.youtube.com/watch?v=o5CGrqcmNow'\n",
-      " 'https://www.youtube.com/watch?v=pJKVOWApsEU'\n",
-      " 'https://www.youtube.com/watch?v=y9ZQj3758mw']\n",
-      "1697.68\n",
-      "41_2018-07-06_1 51_2018-07-06_1 236\n",
-      "51_2018-07-06_1 50_2018-07-06_1 237\n",
-      "50_2018-07-06_1 35_2018-07-06_1 238\n",
-      "35_2018-07-06_1 34_2018-07-06_2 239\n",
-      "34_2018-07-06_2 41_2018-07-06_2 240\n",
-      "41_2018-07-06_2 4_2018-07-06_2 241\n",
-      "4_2018-07-06_2 50_2018-07-06_2 242\n",
-      "50_2018-07-06_2 50_2018-07-06_3 243\n",
-      "50_2018-07-06_3 50_2018-07-06_4 244\n",
-      "50_2018-07-06_4 51_2018-07-06_4 245\n",
-      "51_2018-07-06_4 25_2019-07-05_1 246\n",
-      "25_2019-07-05_1 31_2019-07-05_1 247\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "links = np.unique(lines.transpose()[4])\n",
-    "print(lines[0])\n",
-    "print(links)\n",
     "sample = lines[2]\n",
-    "\n",
-    "print(float(sample[5]))\n",
-    "\n",
     "\n",
     "i=0\n",
     "while i < len(lines):\n",
@@ -186,10 +152,39 @@
     "    idx = np.where(links == sample[4])\n",
     "    ## If its the first video, remove once all have been downloaded\n",
     "    if idx[0][0] == 0:\n",
-    "        print(lines[i][0]+\" \"+lines[i+1][0] +\" \"+str(i))\n",
     "        ffmpeg_extract_subclip(\"videos/\"+str(idx[0][0])+\".mp4\", start, end, \"cropped/\" + name+\".mp4\")\n",
     "        \n",
     "       \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Create a zip archive of the output so the videos can be commited to github"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\mikeG\\\\Documents\\\\school\\\\cisc-452\\\\CISC-452-Group-22\\\\videos_processed.zip'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if os.path.isfile(\"videos_processed.zip\"):\n",
+    "    os.remove(\"videos_processed.zip\")\n",
+    "shutil.make_archive(\"videos_processed\", 'zip', \"cropped\")"
    ]
   }
  ],
