--- a/data-prepro.ipynb
+++ b/data-prepro.ipynb
@@ -125,11 +125,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['https://www.youtube.com/watch?v=-_x798uYXlg'\n",
+      " 'https://www.youtube.com/watch?v=1nZB-YeGJuY'\n",
+      " 'https://www.youtube.com/watch?v=1qsaxQFSOJA'\n",
+      " 'https://www.youtube.com/watch?v=BIcThugvCPQ'\n",
+      " 'https://www.youtube.com/watch?v=DpavgMOwjkU'\n",
+      " 'https://www.youtube.com/watch?v=KI4L0eokqkc'\n",
+      " 'https://www.youtube.com/watch?v=QQZnVEeBigY'\n",
+      " 'https://www.youtube.com/watch?v=eEscR-ZiY2w'\n",
+      " 'https://www.youtube.com/watch?v=fLwHcImYUr8'\n",
+      " 'https://www.youtube.com/watch?v=frbvf1iQ56U'\n",
+      " 'https://www.youtube.com/watch?v=gov-xssWc0E'\n",
+      " 'https://www.youtube.com/watch?v=i0vHEP6T7fw'\n",
+      " 'https://www.youtube.com/watch?v=l4kuUV-hL3s'\n",
+      " 'https://www.youtube.com/watch?v=lBf2lp7OxnY'\n",
+      " 'https://www.youtube.com/watch?v=o5CGrqcmNow'\n",
+      " 'https://www.youtube.com/watch?v=pJKVOWApsEU'\n",
+      " 'https://www.youtube.com/watch?v=y9ZQj3758mw']\n"
+     ]
+    }
+   ],
    "source": [
     "links = np.unique(lines.transpose()[4])\n",
+    "print(links)\n",
     "sample = lines[2]\n",
     "\n",
     "i=0\n",
