Add visibilty of skeleton keypoints

--- a/data-prepro.ipynb
+++ b/data-prepro.ipynb
@@ -727,17 +727,22 @@
     "        skeleton_data[run_id] = []\n",
     "        with open(os.path.join(skeletons_dir, file_name), 'r') as f:\n",
     "            for line in f:\n",
-    "                if \"NULL\" in line:\n",
+    "                if \"NULL\" in line:  # Skip invalid lines\n",
     "                    continue\n",
     "                parts = line.strip().split('#')\n",
     "                frame_number = int(parts[0])\n",
     "                keypoints = parts[1].split(';')\n",
-    "                keypoints = [float(coord) for kp in keypoints for coord in kp.split(',')]\n",
+    "                # Parse coordinates and add visibility (2) for each joint\n",
+    "                keypoints = [float(coord) for kp in keypoints for coord in kp.split(',')]  # Flatten coordinates\n",
+    "                keypoints_with_visibility = []\n",
+    "                for i in range(0, len(keypoints), 2):  # Add visibility score for each joint\n",
+    "                    keypoints_with_visibility.extend([keypoints[i], keypoints[i + 1], 2])\n",
     "                skeleton_data[run_id].append({\n",
     "                    'frame_number': frame_number,\n",
-    "                    'keypoints': keypoints\n",
+    "                    'keypoints': keypoints_with_visibility\n",
     "                })\n",
     "    return skeleton_data\n",
+    "\n",
     "\n",
     "def generate_coco_json(images_dir, skeletons, metadata, output_json):\n",
     "    coco_data = {\n",
@@ -747,7 +752,7 @@
     "            'id': 1,\n",
     "            'name': 'person',\n",
     "            'keypoints': [f'j{i+1}' for i in range(16)],\n",
-    "            'skeleton': [[i, i+1] for i in range(1, 16)]  # Simple linear skeleton structure\n",
+    "            'skeleton': [[i, i+1] for i in range(1, 16)]\n",
     "        }]\n",
     "    }\n",
     "\n",
@@ -783,12 +788,9 @@
     "skeletons_dir = 'data_unprocessed/skeletons'\n",
     "metadata_file = 'data_unprocessed/metadata.txt'\n",
     "output_json = 'climbData.json'\n",
-    "test_json = 'test.json'\n",
-    "\n",
     "# Process\n",
     "metadata = parse_metadata(metadata_file)\n",
     "skeletons = parse_skeletons(skeletons_dir)\n",
-    "\n",
     "generate_coco_json(images_dir, skeletons, metadata, output_json)\n"
    ]
   }
