--- a/data-prepro.ipynb
+++ b/data-prepro.ipynb
@@ -600,12 +600,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import os\n",
+    "import random\n",
     "import sys\n",
     "\n",
     "def print_to_log(*args, sep=' ', end='\\n', file=sys.stdout, flush=False):\n",
@@ -744,17 +745,39 @@
     "        json.dump(coco_data, f, indent=4)\n",
     "\n",
     "\n",
+    "def split_data(metadata, skeletons, training_ratio=0.2):\n",
     "\n",
+    "\n",
+    "    run_ids = list(metadata.keys())\n",
+    "    random.shuffle(run_ids)\n",
+    "    split_index = int(len(run_ids) * training_ratio)\n",
+    "    train_ids = run_ids[:split_index]\n",
+    "    test_ids = run_ids[split_index:]\n",
+    "\n",
+    "    # Split metadata and skeletons\n",
+    "    train_metadata = {run_id: metadata[run_id] for run_id in train_ids}\n",
+    "    test_metadata = {run_id: metadata[run_id] for run_id in test_ids}\n",
+    "    train_skeletons = {run_id: skeletons[run_id] for run_id in train_ids}\n",
+    "    test_skeletons = {run_id: skeletons[run_id] for run_id in test_ids}\n",
+    "\n",
+    "    return train_metadata, test_metadata, train_skeletons, test_skeletons\n",
     "\n",
     "# Paths\n",
     "images_dir = 'img'\n",
     "skeletons_dir = 'data_unprocessed/skeletons'\n",
     "metadata_file = 'data_unprocessed/metadata.txt'\n",
-    "output_json = 'climbData.json'\n",
+    "training_output_json = 'training_climbData.json'\n",
+    "testing_output_json = 'testing_climbData.json'\n",
     "# Process\n",
     "metadata = parse_metadata(metadata_file)\n",
     "skeletons = parse_skeletons(skeletons_dir)\n",
-    "generate_coco_json(images_dir, skeletons, metadata, output_json)\n"
+    "\n",
+    "\n",
+    "train_metadata, test_metadata, train_skeletons, test_skeletons = split_data(metadata, skeletons, test_ratio=0.2, random_seed=42)\n",
+    "\n",
+    "# Generate COCO JSON for training and testing\n",
+    "generate_coco_json(images_dir, train_skeletons, train_metadata, training_output_json)\n",
+    "generate_coco_json(images_dir, test_skeletons, test_metadata, testing_output_json)\n"
    ]
   }
  ],
