cleaned up code

--- a/data-prepro.ipynb
+++ b/data-prepro.ipynb
@@ -9,16 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
     "import math\n",
-    "import shutil\n",
-    "# from moviepy.video.io.VideoFileClip import VideoFileClip\n",
-    "# from moviepy.video.io.ffmpeg_tools import ffmpeg_extract_subclip"
+    "import shutil"
    ]
   },
   {
@@ -40,17 +38,6 @@
     "#parse metadata\n",
     "with open(\"data_unprocessed/metadata.txt\") as file:\n",
     "    lines =  np.array([line.rstrip().split(\";\") for line in file])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "newpath = r'./temp' \n",
-    "if not os.path.exists(newpath):\n",
-    "    os.makedirs(newpath)"
    ]
   },
   {
@@ -189,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +573,6 @@
     "    for _ in range(offset):\n",
     "        success,image = vidcap.read()\n",
     "\n",
-    "    print (\"Number of frames: \", int(vidcap.get(cv2.CAP_PROP_FRAME_COUNT)) - 1)\n",
     "\n",
     "    for i in data:\n",
     "        if i[1] == \"NULL\":\n",
