--- a/group22.ipynb
+++ b/group22.ipynb
@@ -352,51 +352,22 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "here\n",
-      "< cv2.VideoCapture 000001CA3D3C7A70>\n",
-      "here 1\n",
-      "here 2\n",
-      "here 3\n",
-      "here 4\n",
-      "here 5\n",
-      "here 6\n",
-      "here 7\n",
-      "here 8\n",
-      "here 9\n",
-      "here 10\n",
-      "here 11\n",
-      "here 12\n",
-      "here 13\n",
-      "here 14\n",
-      "here 15\n",
-      "here 16\n",
-      "here 17\n",
-      "here 18\n",
-      "here 19\n",
-      "here 20\n",
-      "here 21\n",
-      "here 22\n",
-      "here 23\n",
-      "here 24\n",
-      "here 25\n"
+      "c:\\users\\mikeg\\documents\\school\\cisc-452\\cisc-452-group-22\\mmpose\\mmpose\\models\\heads\\coord_cls_heads\\rtmcc_head.py:217: UserWarning: The predicted simcc values are normalized for visualization. This may cause discrepancy between the keypoint scores and the 1D heatmaps.\n",
+      "  warnings.warn('The predicted simcc values are normalized for '\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
+     "ename": "",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m ret:\n\u001b[0;32m     12\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m data_samples \u001b[38;5;241m=\u001b[39m \u001b[43mprocess_img\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m frame_vis \u001b[38;5;241m=\u001b[39m visualizer\u001b[38;5;241m.\u001b[39mget_image()\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m video_writer \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "Cell \u001b[1;32mIn[5], line 14\u001b[0m, in \u001b[0;36mprocess_img\u001b[1;34m(img, show)\u001b[0m\n\u001b[0;32m     11\u001b[0m bboxes \u001b[38;5;241m=\u001b[39m bboxes[nms(bboxes, \u001b[38;5;241m0.3\u001b[39m), :\u001b[38;5;241m4\u001b[39m]\n\u001b[0;32m     13\u001b[0m pose_results \u001b[38;5;241m=\u001b[39m inference_topdown(pose_estimator, img, bboxes)\n\u001b[1;32m---> 14\u001b[0m data_samples \u001b[38;5;241m=\u001b[39m \u001b[43mmerge_data_samples\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpose_results\u001b[49m\u001b[43m)\u001b[49m \n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# img = mmcv.bgr2rgb(img)\u001b[39;00m\n\u001b[0;32m     17\u001b[0m visualizer\u001b[38;5;241m.\u001b[39madd_datasample(\n\u001b[0;32m     18\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresult\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     19\u001b[0m             img,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     25\u001b[0m             show\u001b[38;5;241m=\u001b[39mshow,\n\u001b[0;32m     26\u001b[0m             wait_time\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
-      "File \u001b[1;32mc:\\users\\mikeg\\documents\\school\\cisc-452\\cisc-452-group-22\\mmpose\\mmpose\\structures\\utils.py:51\u001b[0m, in \u001b[0;36mmerge_data_samples\u001b[1;34m(data_samples)\u001b[0m\n\u001b[0;32m     46\u001b[0m     merged\u001b[38;5;241m.\u001b[39mpred_instances \u001b[38;5;241m=\u001b[39m InstanceData\u001b[38;5;241m.\u001b[39mcat(\n\u001b[0;32m     47\u001b[0m         [d\u001b[38;5;241m.\u001b[39mpred_instances \u001b[38;5;28;01mfor\u001b[39;00m d \u001b[38;5;129;01min\u001b[39;00m data_samples])\n\u001b[0;32m     49\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpred_fields\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m data_samples[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mheatmaps\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m data_samples[\n\u001b[0;32m     50\u001b[0m         \u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mpred_fields:\n\u001b[1;32m---> 51\u001b[0m     reverted_heatmaps \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m     52\u001b[0m         revert_heatmap(data_sample\u001b[38;5;241m.\u001b[39mpred_fields\u001b[38;5;241m.\u001b[39mheatmaps,\n\u001b[0;32m     53\u001b[0m                        data_sample\u001b[38;5;241m.\u001b[39minput_center, data_sample\u001b[38;5;241m.\u001b[39minput_scale,\n\u001b[0;32m     54\u001b[0m                        data_sample\u001b[38;5;241m.\u001b[39mori_shape)\n\u001b[0;32m     55\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m data_sample \u001b[38;5;129;01min\u001b[39;00m data_samples\n\u001b[0;32m     56\u001b[0m     ]\n\u001b[0;32m     58\u001b[0m     merged_heatmaps \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmax(reverted_heatmaps, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     59\u001b[0m     pred_fields \u001b[38;5;241m=\u001b[39m PixelData()\n",
-      "File \u001b[1;32mc:\\users\\mikeg\\documents\\school\\cisc-452\\cisc-452-group-22\\mmpose\\mmpose\\structures\\utils.py:52\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     46\u001b[0m     merged\u001b[38;5;241m.\u001b[39mpred_instances \u001b[38;5;241m=\u001b[39m InstanceData\u001b[38;5;241m.\u001b[39mcat(\n\u001b[0;32m     47\u001b[0m         [d\u001b[38;5;241m.\u001b[39mpred_instances \u001b[38;5;28;01mfor\u001b[39;00m d \u001b[38;5;129;01min\u001b[39;00m data_samples])\n\u001b[0;32m     49\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpred_fields\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m data_samples[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mheatmaps\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m data_samples[\n\u001b[0;32m     50\u001b[0m         \u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mpred_fields:\n\u001b[0;32m     51\u001b[0m     reverted_heatmaps \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m---> 52\u001b[0m         \u001b[43mrevert_heatmap\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_sample\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpred_fields\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mheatmaps\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     53\u001b[0m \u001b[43m                       \u001b[49m\u001b[43mdata_sample\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minput_center\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata_sample\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minput_scale\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     54\u001b[0m \u001b[43m                       \u001b[49m\u001b[43mdata_sample\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mori_shape\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     55\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m data_sample \u001b[38;5;129;01min\u001b[39;00m data_samples\n\u001b[0;32m     56\u001b[0m     ]\n\u001b[0;32m     58\u001b[0m     merged_heatmaps \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmax(reverted_heatmaps, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     59\u001b[0m     pred_fields \u001b[38;5;241m=\u001b[39m PixelData()\n",
-      "File \u001b[1;32mc:\\users\\mikeg\\documents\\school\\cisc-452\\cisc-452-group-22\\mmpose\\mmpose\\structures\\utils.py:106\u001b[0m, in \u001b[0;36mrevert_heatmap\u001b[1;34m(heatmap, input_center, input_scale, img_shape)\u001b[0m\n\u001b[0;32m     98\u001b[0m img_h, img_w \u001b[38;5;241m=\u001b[39m img_shape\n\u001b[0;32m     99\u001b[0m warp_mat \u001b[38;5;241m=\u001b[39m get_warp_matrix(\n\u001b[0;32m    100\u001b[0m     input_center\u001b[38;5;241m.\u001b[39mreshape((\u001b[38;5;241m2\u001b[39m, )),\n\u001b[0;32m    101\u001b[0m     input_scale\u001b[38;5;241m.\u001b[39mreshape((\u001b[38;5;241m2\u001b[39m, )),\n\u001b[0;32m    102\u001b[0m     rot\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m,\n\u001b[0;32m    103\u001b[0m     output_size\u001b[38;5;241m=\u001b[39m(hm_w, hm_h),\n\u001b[0;32m    104\u001b[0m     inv\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m--> 106\u001b[0m heatmap \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwarpAffine\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    107\u001b[0m \u001b[43m    \u001b[49m\u001b[43mheatmap\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwarp_mat\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg_w\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimg_h\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mflags\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mINTER_LINEAR\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    109\u001b[0m \u001b[38;5;66;03m# [H, W, K] -> [K, H, W]\u001b[39;00m\n\u001b[0;32m    110\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ndim \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m3\u001b[39m:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
